5.oct (ws)
      - fix #12959: Two bar rests appear
      - fix #12958: Dragging time signature, clef or key signature onto score causes crash
2.oct (ws)
      - added edit-tools dock widget
29.sep (la)
      - add dynamic and note velocity support in MusicXML export/import
27.sep (ws)
      - fix #12682: When reducing bar line span, other bar lines are not updated
        (patch from miwarre)
24.sep (lv)
      - add MusicXML testfile for issue 12382 ("Key Signature for 2 Staves")
23.sep (ws)
      - implement flip command ("x") for tenuto and staccato articulation symbols.
        Flip changes anchor position note head <-> stem
      - fix sustain (pedal)
      - fix capella import: text position
      - fix audio (wav/ogg/flac) export
21.sep (ws)
      - fix #11157: Omitting staves when creating score causes crash
      - fix #12651: Moving object, then undo causes crash
      - fix #12672: removing instrument causes crash
      - fix #12673: Removing treble stave from mutli-stave instrument causes crash
      - fix #12674: Removing bass stave from multi-stave instrument, then undo causes crash
20.sep (ws)
      - fix #12644: Bar and beat count on status bar doesn't update during playback
      - fix #12639: line dragged from palette are duplicated at the same
        position for linked part
      - fix #12638: Delete tie or slur in linked parts doesn't work
       (la)
      - fix #12648: Quitting, then cancelling to an unsaved score quits MuseScore
18.sep (lv)
      - fix MusicXML import of inverted fermata and marcato
      - fix vertical placement of SLines on MusicXML import
      - don't export system and page breaks when running the MusicXML autotest
        (make several testcases independent of precise layout)
      - updated MusicXML testfiles correspondingly
15.sep (ws)
      - fix #12012: Undo doesn't work after changing value of grace note
      - fix #11778: Stroke on multiple acciaccatura doesn't appear after save